crates/ty_python_semantic/resources/mdtest/snapshots/semantic_syntax_erro…_-_Semantic_syntax_erro…_-_name_is_parameter_an…_(99bae53daf67ae6e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: semantic_syntax_errors.md - Semantic syntax error diagnostics - name is parameter and global
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/semantic_syntax_errors.md
---

# Python source files

## mdtest_snippet.py

```
1 | a = None
2 | 
3 | def f(a):
4 |     global a  # error: [invalid-syntax]
```

# Diagnostics

```
error[invalid-syntax]: name `a` is parameter and global
 --> src/mdtest_snippet.py:4:12
  |
3 | def f(a):
4 |     global a  # error: [invalid-syntax]
  |            ^
  |

```
